# stock_monitor

./: .gitignore  README.md  app.py  main.py  monitor_memory.py  pyproject.toml  requirements.txt  start.sh  start_all.sh  start_uv.sh  status.sh  stop_all.sh
frontend/: .env.development.local  package-lock.json  package.json  package.json.bak
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Navbar.tsx  ValuationCalculator.tsx
frontend/src/pages/: Dashboard.tsx  FullStockList.tsx  ValuationCalculator.tsx  Watchlist.tsx
