[project]
name = "stock-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "akshare>=1.17.44",
    "asyncio-throttle>=1.0.2",
    "fastapi==0.104.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic==2.5.0",
    "python-dotenv>=1.1.1",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "schedule==1.2.0",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
    "tenacity>=8.2.3", # 添加 tenacity 依赖
]
